test/parse/expr/bad-br-no-depth.txt
;;; ERROR: 1
(module
  (func
    (block
      (br))))
(;; STDERR ;;;
parse/expr/bad-br-no-depth.txt:5:10: syntax error, unexpected ), expecting INT or VAR
      (br))))
         ^
;;; STDERR ;;)
